--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.1",
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
